--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
         <label for="cuotasDisponibles" id="cuotas-disponibles-label">Cantidad de Cuotas</label>
         <select id="cuotasDisponibles">
-            <option value="1">1 cuota</option>
-            <option value="2">2 cuotas</option>
-            <option value="3">3 cuotas</option>
-            <option value="6">6 cuotas</option>
-            <option value="9">9 cuotas</option>
-            <option value="12">12 cuotas</option>
-            <option value="18">18 cuotas</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="6">6</option>
+            <option value="9">9</option>
+            <option value="12">12</option>
+            <option value="18">18</option>
         </select>
 
         <button class="button" onclick="calcularCuota()" id="mostrar-cuota-button">Mostrar Valor de Cuotas</button>
